---------------------------------------------------------------

Changes in Go4 v4.03.00 (June 09)
1. Remove Q3Support classes completely - now qt4 based GUI is 
   pure Qt4 application. This solves many side effects like crash
   by style changing or blinking during resize of main window
2. rootmap files are generated per library - this simplifies make 
   procedure significantly, old user makefiles should be still working
3. Go4 makefile now can better recognize standard installed Qt version
   without QTDIR set. 'make WITHQT=3' or 'make WITHQT=4' forces usage of 
   specified qt version.
4. Fix problem with drawing of THStack from canvas or file. 
5. Add proxy for THStack to be able browse into THStack and 
   draw single histograms from it 
6. Better autoscale of THStack class
7. Ensure that drawing of histogram first time done only once,
   in case of 2D histograms doubles the performance
8. When running gui, one can specify one or several root files,
   which will be loaded automatically
9. Fix error (reported by Nick) - gui was hanging when 
   non-existing hotstart file was specified.
     

Changes in Go4 v4.02.00 (April 09)

1. Merge Go4 version 3 with Go4 version 4 together - now
   same package can be compiled either with Qt 3.3 or Qt 4.4.x.
   Version of Qt can be selected by setting proper QTDIR path.
   If QTDIR is not set, default version will be used (if any) 
2. Replace html documents by pdf, use external pdf viewer for them.
3. Reduce usage of qt3support classes in qt4 part of gui.
4. Add in Go4Example2Step example of TGo4Fitter usage   
5. Few more options can be set in TGo4Picture:
   SetStatsAttr(xLeft,yBottom,xRight,yTop,101); (bottom < top)
   SetAxisTitleFontSize(axis, size, 0); axis=0,1,2
   SetAxisLabelFontSize(axis, size, 0); size 0.01...0.1
   SetTitleAttr(xLeft,yBottom,xRight,yTop);
   


Changes in Go4 v4.01.01 (November08)

1. Maintenance: code adjustments for compilers gcc 4.3.x
